--- a/packages/core/i18n/nls.pl.json
+++ b/packages/core/i18n/nls.pl.json
@@ -70,17 +70,12 @@
     "editor": {
       "diffEditor.diffAlgorithm.experimental": "Wykorzystuje eksperymentalny algorytm diffingu.",
       "diffEditor.diffAlgorithm.smart": "Używa domyślnego algorytmu dyfuzji.",
-      "diffEditor.renderMarginRevertIcon": "Kiedy jest włączony, edytor dyfuzji pokazuje strzałki na swoim marginesie glifów, aby odwrócić zmiany.",
       "dirtyEncoding": "Plik jest zabrudzony. Proszę zapisać go najpierw przed ponownym otwarciem z innym kodowaniem.",
       "editor.codeActionWidget.showHeaders": "Włączenie/wyłączenie pokazywania nagłówków grup w menu akcji kodu.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Spowoduje próbę sformatowania tylko modyfikacji (wymaga kontroli źródła). Jeśli kontrola źródła nie może być użyta, sformatowany zostanie cały plik.",
       "editor.inlayHints.enabled1": "Podpowiedzi są domyślnie wyświetlane i ukrywają się po przytrzymaniu `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "Podpowiedzi są domyślnie ukryte i pokazują się po przytrzymaniu `Ctrl+Alt`.",
-      "editor.minimap.autohide": "Kontroluje, czy minimapa jest automatycznie ukrywana.",
-      "editor.multiCursorModifier": "Modyfikator, który ma być użyty do dodania wielu kursorów za pomocą myszy. Gesty myszy Przejdź do definicji i Otwórz łącze dostosują się tak, by nie kolidowały z modyfikatorem [wielokursorowy modyfikator](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
       "editor.quickSuggestions": "Kontroluje czy sugestie powinny być automatycznie wyświetlane podczas pisania. Można to kontrolować w przypadku wpisywania komentarzy, ciągów znaków i innego kodu. Szybkie sugestie mogą być skonfigurowane tak, aby pokazywały się jako tekst widma lub z widżetem sugestii. Należy również pamiętać o ustawieniu '#editor.suggestOnTriggerCharacters#', które kontroluje czy sugestie są uruchamiane przez znaki specjalne.",
-      "editor.showFoldingControls1": "Nigdy nie należy pokazywać elementów sterujących składaniem i zmniejszać wielkości rynny.",
-      "editor.stickyScroll.enabled": "Pokazuje zagnieżdżone bieżące zakresy podczas przewijania na górze edytora.",
       "editor.stickyScroll.maxLineCount": "Określa maksymalną liczbę lepkich linii do pokazania.",
       "editor.suggest.matchOnWordStartOnly": "Kiedy włączone filtrowanie IntelliSense wymaga, aby pierwszy znak pasował na początku słowa, np. `c` na `Console` lub `WebContext` ale _nie_ na `description`. Kiedy wyłączone IntelliSense pokaże więcej wyników, ale nadal sortuje je według jakości dopasowania.",
       "files.autoSave": "Steruje funkcją [automatycznego zapisywania](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) edytorów, w których nie zapisano zmian.",
@@ -97,6 +92,9 @@
     },
     "file-search": {
       "toggleIgnoredFiles": " (Naciśnij {0}, aby pokazać/ukryć ignorowane pliki)"
+    },
+    "fileDialog": {
+      "showHidden": "Pokaż ukryte pliki"
     },
     "fileSystem": {
       "fileResource": {
