--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -70,17 +70,12 @@
     "editor": {
       "diffEditor.diffAlgorithm.experimental": "Использует экспериментальный алгоритм диффинга.",
       "diffEditor.diffAlgorithm.smart": "Использует алгоритм диффиринга по умолчанию.",
-      "diffEditor.renderMarginRevertIcon": "Если эта функция включена, редактор различий показывает стрелки на полях глифов для отмены изменений.",
       "dirtyEncoding": "Файл загрязнен. Пожалуйста, сначала сохраните его, а затем откройте с другой кодировкой.",
       "editor.codeActionWidget.showHeaders": "Включить/выключить показ заголовков групп в меню действий кода.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Попытается отформатировать только модификации (требуется контроль исходного текста). Если контроль источника не может быть использован, то будет отформатирован весь файл.",
       "editor.inlayHints.enabled1": "Подсказки инкрустации отображаются по умолчанию и скрываются при нажатии `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "Подсказки инкрустации скрыты по умолчанию и отображаются при нажатии `Ctrl+Alt`.",
-      "editor.minimap.autohide": "Управляет тем, будет ли мини-карта скрываться автоматически.",
-      "editor.multiCursorModifier": "Модификатор, который будет использоваться для добавления нескольких курсоров с помощью мыши. Жесты мыши \"Перейти к определению\" и \"Открыть ссылку\" будут адаптированы таким образом, чтобы они не конфликтовали с модификатором [multicursor modifier](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
       "editor.quickSuggestions": "Управляет тем, должны ли предложения автоматически появляться при вводе текста. Этим можно управлять при вводе комментариев, строк и другого кода. Быстрые предложения могут быть настроены на отображение в виде призрачного текста или виджета предложений. Также обратите внимание на настройку '#editor.suggestOnTriggerCharacters#', которая определяет, будут ли появляться предложения при использовании специальных символов.",
-      "editor.showFoldingControls1": "Никогда не показывайте складные регуляторы и не уменьшайте размер желоба.",
-      "editor.stickyScroll.enabled": "Показывает вложенные текущие области видимости при прокрутке в верхней части редактора.",
       "editor.stickyScroll.maxLineCount": "Определяет максимальное количество отображаемых липких линий.",
       "editor.suggest.matchOnWordStartOnly": "При включении фильтрации IntelliSense требуется, чтобы первый символ совпадал с началом слова, например, `c` в `Console` или `WebContext`, но _нет_ в `description`. При отключении IntelliSense показывает больше результатов, но все равно сортирует их по качеству совпадения.",
       "files.autoSave": "Управляет [автосохранением](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) редакторов, в которых есть несохраненные изменения.",
@@ -97,6 +92,9 @@
     },
     "file-search": {
       "toggleIgnoredFiles": " (Нажмите {0}, чтобы показать/скрыть игнорируемые файлы)"
+    },
+    "fileDialog": {
+      "showHidden": "Показать скрытые файлы"
     },
     "fileSystem": {
       "fileResource": {
