--- a/packages/core/i18n/nls.it.json
+++ b/packages/core/i18n/nls.it.json
@@ -70,17 +70,12 @@
     "editor": {
       "diffEditor.diffAlgorithm.experimental": "Utilizza un algoritmo di diffing sperimentale.",
       "diffEditor.diffAlgorithm.smart": "Utilizza l'algoritmo di differenziazione predefinito.",
-      "diffEditor.renderMarginRevertIcon": "Quando è abilitato, l'editor diff mostra delle frecce nel margine del glifo per annullare le modifiche.",
       "dirtyEncoding": "Il file è sporco. Salvarlo prima di riaprirlo con un'altra codifica.",
       "editor.codeActionWidget.showHeaders": "Abilita/disabilita la visualizzazione delle intestazioni dei gruppi nel menu delle azioni del codice.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Tenterà di formattare solo le modifiche (richiede il controllo della fonte). Se il controllo della fonte non può essere usato, allora l'intero file sarà formattato.",
       "editor.inlayHints.enabled1": "I suggerimenti per l'intarsio sono visualizzati per impostazione predefinita e si nascondono quando si tiene premuto `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "I suggerimenti per l'intarsio sono nascosti per impostazione predefinita e vengono visualizzati quando si tiene premuto `Ctrl+Alt`.",
-      "editor.minimap.autohide": "Controlla se la minimappa viene nascosta automaticamente.",
-      "editor.multiCursorModifier": "Il modificatore da utilizzare per aggiungere più cursori con il mouse. I gesti del mouse Vai alla definizione e Apri collegamento si adatteranno in modo da non entrare in conflitto con il [modificatore multicursore](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
       "editor.quickSuggestions": "Controlla se i suggerimenti devono essere visualizzati automaticamente durante la digitazione. Questo può essere controllato per la digitazione di commenti, stringhe e altro codice. Il suggerimento rapido può essere configurato per essere visualizzato come testo fantasma o con il widget Suggerimento. Si tenga presente anche l'impostazione '#editor.suggestOnTriggerCharacters#', che controlla se i suggerimenti vengono attivati da caratteri speciali.",
-      "editor.showFoldingControls1": "Non mostrare mai i comandi di ripiegamento e ridurre le dimensioni della grondaia.",
-      "editor.stickyScroll.enabled": "Mostra gli ambiti correnti annidati durante lo scorrimento nella parte superiore dell'editor.",
       "editor.stickyScroll.maxLineCount": "Definisce il numero massimo di righe appiccicose da mostrare.",
       "editor.suggest.matchOnWordStartOnly": "Se abilitato, il filtro IntelliSense richiede che il primo carattere corrisponda all'inizio di una parola, ad esempio `c` su `Console` o `WebContext` ma _non_ su `description`. Quando è disattivato, IntelliSense mostra più risultati, ma li ordina comunque in base alla qualità della corrispondenza.",
       "files.autoSave": "Controlla il [salvataggio automatico](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) degli editor che hanno modifiche non salvate.",
@@ -97,6 +92,9 @@
     },
     "file-search": {
       "toggleIgnoredFiles": " (Premere {0} per mostrare/nascondere i file ignorati)"
+    },
+    "fileDialog": {
+      "showHidden": "Mostra i file nascosti"
     },
     "fileSystem": {
       "fileResource": {
