--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -70,17 +70,12 @@
     "editor": {
       "diffEditor.diffAlgorithm.experimental": "使用一种实验性的扩散算法。",
       "diffEditor.diffAlgorithm.smart": "使用默认的差分算法。",
-      "diffEditor.renderMarginRevertIcon": "启用后,差异编辑器在其字形边框中显示箭头,以恢复修改。",
       "dirtyEncoding": "该文件是脏的。请先保存它,然后用另一种编码重新打开它。",
       "editor.codeActionWidget.showHeaders": "启用/禁用在代码动作菜单中显示组标题。",
       "editor.formatOnSaveMode.modificationsIfAvailable": "将尝试只对修改部分进行格式化(需要源代码控制)。如果不能使用源码控制,那么整个文件将被格式化。",
       "editor.inlayHints.enabled1": "镶嵌提示默认显示,按住 \"Ctrl+Alt \"时隐藏。",
       "editor.inlayHints.enabled2": "镶嵌提示默认是隐藏的,当按住`Ctrl+Alt`时显示。",
-      "editor.minimap.autohide": "控制是否自动隐藏小地图。",
-      "editor.multiCursorModifier": "用于用鼠标添加多个光标的修改器。转到定义和打开链接的鼠标手势将进行调整,使其不与[多光标修改器](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier)冲突。",
       "editor.quickSuggestions": "控制在输入时是否应该自动显示建议。这可以在输入评论、字符串和其他代码时加以控制。快速建议可以被配置为显示为幽灵文本或建议小部件。还要注意'#editor.suggestOnTriggerCharacters#'设置,它控制建议是否被特殊字符触发。",
-      "editor.showFoldingControls1": "千万不要显示折叠式控制,减少水沟的大小。",
-      "editor.stickyScroll.enabled": "在编辑器顶部的滚动中显示嵌套的当前作用域。",
       "editor.stickyScroll.maxLineCount": "定义要显示的最大粘性线数。",
       "editor.suggest.matchOnWordStartOnly": "当启用IntelliSense过滤功能时,需要在一个词的开头匹配第一个字符,例如在 \"Console \"或 \"WebContext \"上的 \"c\",但在 \"description \"上_不需要。当禁用IntelliSense时,将显示更多的结果,但仍然按照匹配质量进行排序。",
       "files.autoSave": "控制有未保存的修改的编辑器的[自动保存](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save)。",
@@ -97,6 +92,9 @@
     },
     "file-search": {
       "toggleIgnoredFiles": "(按{0}显示/隐藏被忽略的文件)"
+    },
+    "fileDialog": {
+      "showHidden": "显示隐藏的文件"
     },
     "fileSystem": {
       "fileResource": {
